--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
+body, html {
+    height: 100%;
+}
+
+
 body {
-    background-image: url(/images/istockphoto-981600810-612x612.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
+    background-color: silver;
+    
     
 }
 .title {
@@ -33,4 +36,26 @@ body {
     white-space: nowrap;
     
 
+}
+/*hero image*/
+.hero-image {
+    background-image: url(/images/istockphoto-981600810-612x612.jpg);
+    height: 600px;
+    width: 100%;
+    margin-top: 10px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    opacity: 0.8;
+    font-size: 31px;
+    border-radius: 15px;
+    background-size: cover;
+}
+.hero-text {
+    text-align: center;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
