--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ body {
     line-height: 20px;
     padding: 5px;
     margin: 5px;
+    font-size: 25.1px;
     color: #ffffff;
     float: left;
     display: inline;
@@ -58,4 +59,19 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+}
+.information h2  {
+    text-align: center;
+    flex-wrap: wrap;
+}
+.details {
+    width: 50%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    
+    float: left;
+    
+
+    
 }
