changed background image style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 /*hero image*/
 .hero-image {
-    background-image: url(/images/istockphoto-981600810-612x612.jpg);
+    background-image: url(/images/surreal-6645614__340.webp);
     height: 600px;
     width: 100%;
     margin-top: 10px;
