--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,17 @@ body {
     border-radius: 15px;
     background-size: cover;
 }
+.hero-button {
+    font-size: 25px;
+    border-radius: 20px;
+    background-color: slategray;
+   
+    
+}
+.hero-link {
+    text-decoration: none;
+    
+}
 .hero-text {
     text-align: center;
     position:absolute;
