changed image in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 /*hero image*/
 .hero-image {
-    background-image: url(/images/surreal-6645614__340.webp);
+    background-image: url(/images/Space-Galaxy-Backgrounds-800x600.jpg);
     height: 600px;
     width: 100%;
     margin-top: 10px;
