add animation using png ufo to css and html researched several points using youtube tutorials

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,61 @@ body {
     float: left;
       
 }
+.ufo img {
+    width: 50px;
+    animation: ufo 7s linear infinite;
+
+}
+.ufo img {
+    width: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 0;
+}
+@keyframes ufo {
+    0%{
+        transform: translateY(0);
+        opacity: 0;
+    }
+    50%{
+        
+        opacity: 1;
+}
+    70%{
+    
+    opacity: 1;
+}
+    100%{
+    transform: translateY(-80vh);
+    opacity: 0;
+}
+}
+.ufo img:nth-child(1){
+    animation-delay: 2s;
+}
+.ufo img:nth-child(2){
+    animation-delay: 1s;
+}
+.ufo img:nth-child(3){
+    animation-delay: 4s;
+}
+.ufo img:nth-child(4){
+    animation-delay: 1.5s;
+}
+.ufo img:nth-child(5){
+    animation-delay: 2.5s;
+}
+.ufo img:nth-child(6){
+    animation-delay: 5s;
+}
+.ufo img:nth-child(7){
+    animation-delay: 7s;
+}
+
+
+
 footer {
     height: 150px;
 
